# simple-metrics-endpoint

./: Cargo.toml  Dockerfile  README.md
deploy/kustomize/: canary-metrics.yaml  canary.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pod-monitor.yaml  service-monitor.yaml  service.yaml
src/: main.rs
