[package]
name = "simple-metrics-endpoint"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.27"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
